SERVER-64078 Only truncate error messages if they are bigger than 1M